cabal-version: 3.0
name:          pocre-delegate-server
version:       0.1.0

flag dev
  description:
    Defer errors from the PlutusTx plugin, which break HLS and Haddock. Also disable Werror.

  default:     True
  manual:      False

common common-lang
  -- Options from MLabs styleguide

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies
    -Wno-redundant-constraints

  if !flag(dev)
    ghc-options: -Werror

  build-depends:
    , aeson
    , base
    , base16-bytestring
    , lens
    , lens-aeson
    , mtl
    , plutus-ledger-api
    , record-dot-preprocessor
    , record-hasfield
    , transformers

  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PatternSynonyms
    QuantifiedConstraints
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  if flag(dev)
    default-extensions: PartialTypeSignatures

  default-language:   Haskell2010

common common-offchain
  import:        common-lang
  build-depends:
    , async
    , bytestring
    , cardano-api
    , cardano-ledger-core
    , containers
    , contra-tracer
    , ed25519
    , exceptions
    , extra
    , filepath
    , hydra-cardano-api
    , hydra-cluster
    , hydra-node
    , hydra-plutus
    , hydra-prelude
    , prettyprinter
    , stm
    , text
    , time
    , time-machine
    , unix
    , websockets

common common-onchain
  import:      common-lang

  if flag(dev)
    ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

  -- Options for Plutus Tx compilations

  ghc-options:
    -fobject-code -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-specialize
    -fno-unbox-small-strict-fields -fno-unbox-strict-fields

common common-executable
  import:      common-offchain
  ghc-options: -threaded -rtsopts

library pocre-onchain
  import:          common-onchain
  hs-source-dirs:  src-lib/onchain
  exposed-modules:
    POCRE.OnChain.Dispute
    POCRE.OnChain.TotalMap
    POCRE.OnChain.Types

  build-depends:
    , containers
    , hydra-auction:{hydra-auction-utils, hydra-auction-utils-onchain}
    , plutus-tx
    , plutus-tx-plugin
